RESOLVED FIXED302647
[threaded-animations] timelines contained within iframes don't get uploaded to the remote layer tree
https://bugs.webkit.org/show_bug.cgi?id=302647
Summary [threaded-animations] timelines contained within iframes don't get uploaded t...
Antoine Quint
Reported 2025-11-17 09:46:56 PST
Timelines contained within iframes don't get uploaded to the remote layer tree and this yields a crash on a page like https://codepen.io/michellebarker/pen/JjxBzvO since we fail to find the expected timeline on the remote end and fail an assertion.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-17 09:47:05 PST
Antoine Quint
Comment 2 2025-11-17 09:49:06 PST
EWS
Comment 3 2025-11-17 22:39:36 PST
Committed 303169@main (62b90babf8ba): <https://commits.webkit.org/303169@main> Reviewed commits have been landed. Closing PR #54055 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.