[threaded-animations] timelines contained within iframes don't get uploaded to the remote layer tree https://bugs.webkit.org/show_bug.cgi?id=302647 rdar://164892610

Reviewed by Simon Fraser.

When we added support for uploading timelines through the remote layer tree transaction in 301942@main
we only ever looked for timelines in the top-level document of any given page. We now iterate through
all of a page's documents and make a union of all timelines found.

Test: webanimations/threaded-animations/scroll-timeline-in-iframe.html

* LayoutTests/webanimations/threaded-animations/resources/scroll-timeline-in-iframe-content.html: Added.
* LayoutTests/webanimations/threaded-animations/scroll-timeline-in-iframe-expected.txt: Added.
* LayoutTests/webanimations/threaded-animations/scroll-timeline-in-iframe.html: Added.
* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::willCommitLayerTree):

Canonical link: https://commits.webkit.org/303169@main